# django-myuser

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: publish.yml
django_myuser/: serializers.py  social_views.py  tasks.py  urls.py  views.py
docs/: API.md  CONFIGURATION.md  TEMPLATES.md
tests/: README.md  __init__.py  conftest.py  factories.py  test_api.py  test_audit_log.py  test_data_requests.py  test_email_async.py  test_profile.py  test_rate_limiting.py  test_sessions.py  test_social_adapters.py  test_social_auth.py
tests/integration/: test_auth_api.py  test_data_export_workflow.py  test_data_request_api.py  test_profile_api.py  test_session_api.py  test_social_auth_api.py
tests/security/: test_authentication_security.py
tests/test_project/: settings.py  urls.py
tests/unit/: test_exporters.py  test_models.py  test_tasks.py
